Fix uneven rendering of "read more" links.

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -94,7 +94,8 @@
         }
 
         .read-more {
-            margin-top: -.5rem;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
             font-family: $header-font-family;
             font-size: 80%;
             text-align: right;
